# siplane

./: .gitignore  Cargo.toml  nspawn_incantation.txt  shell.nix
coordinator/: .gitignore  README.md  mix.exs  shell.nix
coordinator/assets/: tailwind.config.js
coordinator/assets/js/: app.js
coordinator/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
coordinator/lib/: siplane.ex  siplane_web.ex  treadmill.ex  treadmill_web.ex
coordinator/lib/siplane/: application.ex  board.ex  board_environment.ex  board_orchestrator.ex  environment.ex  job.ex  log.ex  mailer.ex  repo.ex  user.ex
coordinator/lib/siplane/board/: board_log_event.ex  board_server.ex
coordinator/lib/siplane/job/: job_log_event.ex
coordinator/lib/siplane_web/: endpoint.ex  router.ex  telemetry.ex
coordinator/lib/siplane_web/api/: error_view.ex
coordinator/lib/siplane_web/api/runner_v0/: board_controller.ex  job_controller.ex
coordinator/lib/siplane_web/web_ui/: auth_controller.ex  board_controller.ex  error_html.ex  error_json.ex  gettext.ex  job_controller.ex  page_controller.ex  page_html.ex  user_controller.ex
coordinator/lib/siplane_web/web_ui/components/: core_components.ex  layouts.ex
coordinator/lib/siplane_web/web_ui/components/layouts/: app.html.heex  root.html.heex
coordinator/lib/siplane_web/web_ui/live_hooks/: set_user.ex
coordinator/lib/siplane_web/web_ui/page_html/: board.html.heex  boards.html.heex  home.html.heex  job.html.heex  user.html.heex
coordinator/lib/siplane_web/web_ui/plugs/: set_user.ex
coordinator/lib/treadmill/: application.ex  board.ex  environment.ex  job.ex  log.ex  mailer.ex  repo.ex  user.ex
coordinator/lib/treadmill/board/: board.ex  board_environment.ex  board_environment_parameter.ex  board_log_event.ex  board_parameter.ex  board_server.ex
coordinator/lib/treadmill/environment/: environment.ex  environment_parameter.ex
coordinator/lib/treadmill/job/: job.ex  job_log_event.ex  job_parameter.ex
coordinator/lib/treadmill/user/: user.ex
coordinator/lib/treadmill_web/: endpoint.ex  router.ex  telemetry.ex
coordinator/lib/treadmill_web/api/: error_view.ex
coordinator/lib/treadmill_web/api/runner_v0/: board_controller.ex  job_controller.ex
coordinator/lib/treadmill_web/web_ui/: auth_controller.ex  board_controller.ex  error_html.ex  error_json.ex  gettext.ex  job_controller.ex  page_controller.ex  page_html.ex  user_controller.ex
coordinator/lib/treadmill_web/web_ui/components/: core_components.ex  layouts.ex
coordinator/lib/treadmill_web/web_ui/components/layouts/: root.html.heex
coordinator/lib/treadmill_web/web_ui/live_hooks/: set_user.ex
coordinator/lib/treadmill_web/web_ui/page_html/: board.html.heex  job.html.heex
coordinator/lib/treadmill_web/web_ui/plugs/: set_user.ex
coordinator/priv/repo/: seeds.exs
coordinator/priv/repo/migrations/: 20231111152017_init.exs  20240122190238_add_job_parameters.exs
coordinator/test/: test_helper.exs
coordinator/test/siplane_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
coordinator/test/support/: conn_case.ex  data_case.ex
coordinator/test/treadmill_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
environments/: 0001-Nix-compatibility.patch  mkosi.nix
environments/opentitan-cw310-dev/: README.md  mkosi.conf  mkosi.postinst.chroot
environments/opentitan-cw310-dev/mkosi.extra/opt/: xilinx_vivado_lab_lin_install_config.txt
netboot-runner/: Cargo.toml  runner_config.toml
netboot-runner/src/: main.rs
nspawn-runner/: Cargo.toml  log.txt  runner_config.toml
nspawn-runner/src/: connector.rs  control_socket.rs  main.rs  test_connector.rs
puppet/: Cargo.toml
puppet/src/: main.rs
rendezvous-proxy/: Cargo.toml
rendezvous-proxy/src/: lib.rs  main.rs
rendezvous-server/: Cargo.toml
rendezvous-server/src/: main.rs
siplane-rs/: Cargo.toml
siplane-rs/src/: api.rs  connector.rs  control_socket.rs  dummy_connector.rs
siplane-rs/src/api/: coord_runner.rs  runner_puppet.rs
sse-connector/: Cargo.toml
sse-connector/src/: lib.rs
tcp-control-socket/: Cargo.toml
tcp-control-socket/src/: lib.rs
treadmill-rs/: Cargo.toml
treadmill-rs/src/: connector.rs  control_socket.rs  dummy_connector.rs  lib.rs
treadmill-rs/src/api/: coord_runner.rs  runner_puppet.rs
unix-seqpacket-control-socket/: Cargo.toml
unix-seqpacket-control-socket/src/: lib.rs
