[package]
name = "siplane-nspawn-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
async-trait = "0.1.75"
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.20"
nix = { version = "0.27.1", default-features = false, features = ["signal"] }
serde = { version = "1.0.193", features = ["derive"] }
simplelog = "0.12.1"
siplane-rs = { path = "../siplane-rs" }
siplane-sse-connector = { path = "../sse-connector" }
siplane-unix-seqpacket-control-socket = { path = "../unix-seqpacket-control-socket" }
tokio = { version = "1.35.1", default-features = false, features = ["rt-multi-thread", "process", "fs"] }
toml = "0.8.8"
uuid = "1.6.1"
