[package]
name = "treadmill-nspawn-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
async-trait = "0.1.75"
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.20"
nix = { version = "0.27.1", default-features = false, features = ["signal"] }
serde = { version = "1.0.193", features = ["derive"] }
simplelog = "0.12.1"
treadmill-rs = { path = "../treadmill-rs" }
treadmill-sse-connector = { path = "../sse-connector" }
treadmill-unix-seqpacket-control-socket = { path = "../unix-seqpacket-control-socket" }
rendezvous-proxy = { path = "../rendezvous-proxy" }
tokio = { version = "1.35.1", default-features = false, features = ["rt-multi-thread", "process", "fs"] }
toml = "0.8.8"
uuid = "1.6.1"
