[package]
name = "treadmill-puppet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treadmill-rs = { path = "../treadmill-rs" }

anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
simplelog = "0.12.1"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "rt", "macros", "fs", "sync", "process"] }
tokio-seqpacket = "0.7.1"
serde_json = "1.0.108"
log = "0.4.20"
