[package]
name = "rendezvous-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "rendezvous-proxy-bin"
# path = "src/main.rs"


[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
eventsource-client = "0.12.2"
futures = { version = "0.3.30", default-features = false }
http = { version = "1.0.0", default-features = false }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simplelog = "0.12.1"
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-native-certs", "rustls-tls-native-roots"] }
tungstenite = { version = "0.21.0", default-features = false }
uuid = "1.6.1"
