[package]
name = "rendezvous-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
rocket = { version = "0.5.0", features = ["uuid"] }
rocket_ws = "0.1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = "1.35.1"
uuid = "1.6.1"
