[package]
name = "siplane-sse-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
siplane-rs = { path = "../siplane-rs" }

async-trait = "0.1.75"
eventsource-client = "0.12.2"
futures = { version = "0.3.29", default-features = false }
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", default-features = false, features = ["macros"] }
uuid = "1.6.1"
