[package]
name = "treadmill-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "dummy_connector" ]

dummy_connector = [
  "uuid/v4", "tokio/signal"
]

[dependencies]
async-trait = "0.1.75"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["serde"] }

tokio = { version = "1.35.1", default-features = false, optional = true }
log = "0.4.20"
