[package]
name = "siplane-unix-seqpacket-control-socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
siplane-rs = { path = "../siplane-rs" }

serde_json = "1.0.108"
tokio-seqpacket = "0.7.1"
tokio = { version = "1.35.1", default-features = false, features = ["sync", "rt", "macros"] }
anyhow = "1.0.76"
log = "0.4.20"
uuid = "1.6.1"
